fix: updated posts.js and pid.yaml for coveralls
