# public/openapi/write/posts/pid.yaml
@@ -74,6 +74,19 @@ get:
                     type: boolean
                   downvoted:
                     type: boolean
+                required:
+                  - pid
+                  - uid
+                  - tid
+                  - content
+                  - timestamp
+                  - upvotes
+                  - downvotes
+                  - votes
+                  - timestampISO
+                  - upvoted
+                  - downvoted
+                  - endorsedByStaff
 put:
   tags:
     - posts
